<resources>
    <string name="app_name">Week 6 Navigation Drawer</string>
    <string name="all_inbox">All Inbox</string>
    <string name="main">Main</string>
    <string name="social">Social</string>
    <string name="promotion">Promotion</string>
    <string name="all_label">ALL LABEL</string>
    <string name="starred">Starred</string>
    <string name="pending">Pending</string>
    <string name="sent">Sent</string>
    <string name="outbox">Outbox</string>
    <string name="draft">Draft</string>
    <string name="spam">Spam</string>
    <string name="google_app">GOOGLE APP</string>
    <string name="calendar">Calendar</string>
    <string name="contact">Contact</string>
    <string name="setting">Setting</string>
    <string name="support_amp_feedback"><![CDATA[Support & Feedback]]></string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>